--- a/frontend/pub/style.css
+++ b/frontend/pub/style.css
@@ -45,6 +45,7 @@
     transform: translateX(-50%);
     padding: 20px;
     background-color: rgb(209, 56, 176);
+    color: white
 }
 
 .swiper-slide img {
