--- a/frontend/pub/style.css
+++ b/frontend/pub/style.css
@@ -33,26 +33,49 @@
   
   /* -------------------- CSS reset vége -------------------- */
 
+body {
+  background: #262626;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin: 0;
+  padding: 0;
+  }
+
 .swiper {
-    width: 100%;
-    height: 100vh;
-}
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  }
 
 .swiper-slide h2 {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px;
-    background-color: rgb(209, 56, 176);
-    color: white;
-    z-index: 100
+  position: absolute;
+  top: 0;
+  left: 5%;
+  color: #fff;
+  font-size: 30px;
+  z-index: 100
+}
+
+.swiper-slide h3 {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  color: #fff;
+  font-size: 20px;
+}
+
+.swiper-slide p {
+  position: absolute;
+  max-width: 800px;
+  top: 10%;
+  left: 5%;
+  color: #fff;
+  font-size: 18px;
 }
 
 .swiper-slide img {
 
-    transform: translateX(75%);
-    width: 40%;
-    object-fit: cover
-
+  transform: translateX(100%);
+  width: 50%; 
+  height: 90vh;
+  object-fit: cover
 }
